--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "display":"chromium-browser --kiosk http://localhost:3000 --window-position=0,0"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
