--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "telegrambot": "^0.1.0"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
@@ -25,6 +26,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
+    "eslint-config-prettier": "^8.5.0",
     "sass": "^1.54.9",
     "typescript": "4.8.3"
   }
